@@ -1,6 +1,7 @@
+#!bin/sh
 . /etc/hotplug/hotplug.functions
 
 # wait for sysfs
 sleep 1
 
-mesg `/sbin/multipath scsi $DEVPATH`
+mesg `/sbin/multipath $DEVPATH`
